Made a test scene for Physijs+Cannon. Physijs worker is not passing any messages back, so nothing is updating. Began modifications to support RaycastVehicle class through Physijs.

--- a/index.html
+++ b/index.html
@@ -9,10 +9,9 @@
 		<script src="lib/FlyControls.js"></script>
 		<script src="lib/util.js"></script>
 		<script src="lib/stats.min.js"></script>
-		<script src="lib/cannon.js"></script>
-		<script src="lib/physijs_worker.js"></script>
+		<script src="lib/tween.js"></script>
 		<script src="lib/physi.js"></script>
-		<script src="lib/main.js"></script>
+		<script src="main.js"></script>
 	</head>
 	<body>
 		
